front-20161220/egg/Linux/egg_y.output
Terminals unused in grammar

   NONSENSE
   commentsym


Grammar

    0 $accept: egg $end

    1 egg: Uses OPTMORE_Group

    2 Uses: usessym Strings semicolonsym

    3 Strings: ALT_Stringsym_SEP_commasym

    4 Declarations: OPTMORE_Declaration

    5 Declaration: MessageKind equalssym MORE_Expression semicolonsym

    6 Expression: Stringsym
    7           | Identsym openparsym Params closeparsym
    8           | Identsym

    9 Params: ALT_Expression_SEP_commasym

   10 Statements: OPTMORE_Statement

   11 Statement: Message
   12          | Group

   13 MessageKind: errorsym
   14            | warningsym
   15            | disabledsym
   16            | keysym
   17            | postsym

   18 Message: OPT_fatalsym Identsym SubMessages semicolonsym

   19 SubMessages: ALT_SubMessage_SEP_commasym

   20 SubMessage: MessageKind Stringsym

   21 Group: OPT_fatalsym Identsym OPT_openparsym_Identsym_closeparsym OPT_groupsym openchainsym Declarations Statements closechainsym

   22 OPTMORE_Group: %empty
   23              | Group OPTMORE_Group

   24 ALT_Stringsym_SEP_commasym: Stringsym
   25                           | Stringsym commasym ALT_Stringsym_SEP_commasym

   26 OPTMORE_Declaration: %empty
   27                    | Declaration OPTMORE_Declaration

   28 MORE_Expression: Expression
   29                | Expression MORE_Expression

   30 ALT_Expression_SEP_commasym: Expression
   31                            | Expression commasym ALT_Expression_SEP_commasym

   32 OPTMORE_Statement: %empty
   33                  | Statement OPTMORE_Statement

   34 OPT_fatalsym: %empty
   35             | fatalsym

   36 ALT_SubMessage_SEP_commasym: SubMessage
   37                            | SubMessage commasym ALT_SubMessage_SEP_commasym

   38 OPT_openparsym_Identsym_closeparsym: %empty
   39                                    | openparsym Identsym closeparsym

   40 OPT_groupsym: %empty
   41             | groupsym

   42 egg: hole_egg
   43    | start_egg egg

   44 Uses: hole_Uses

   45 egg: start_Uses Uses

   46 Strings: hole_Strings

   47 egg: start_Strings Strings

   48 Declarations: hole_Declarations

   49 egg: start_Declarations Declarations

   50 Declaration: hole_Declaration

   51 egg: start_Declaration Declaration

   52 Expression: hole_Expression

   53 egg: start_Expression Expression

   54 Params: hole_Params

   55 egg: start_Params Params

   56 Statements: hole_Statements

   57 egg: start_Statements Statements

   58 Statement: hole_Statement

   59 egg: start_Statement Statement

   60 MessageKind: hole_MessageKind

   61 egg: start_MessageKind MessageKind

   62 Message: hole_Message

   63 egg: start_Message Message

   64 SubMessages: hole_SubMessages

   65 egg: start_SubMessages SubMessages

   66 SubMessage: hole_SubMessage

   67 egg: start_SubMessage SubMessage

   68 Group: hole_Group

   69 egg: start_Group Group

   70 OPTMORE_Group: hole_OPTMORE_Group

   71 egg: start_OPTMORE_Group OPTMORE_Group

   72 ALT_Stringsym_SEP_commasym: hole_ALT_Stringsym_SEP_commasym

   73 egg: start_ALT_Stringsym_SEP_commasym ALT_Stringsym_SEP_commasym

   74 OPTMORE_Declaration: hole_OPTMORE_Declaration

   75 egg: start_OPTMORE_Declaration OPTMORE_Declaration

   76 MORE_Expression: hole_MORE_Expression

   77 egg: start_MORE_Expression MORE_Expression

   78 ALT_Expression_SEP_commasym: hole_ALT_Expression_SEP_commasym

   79 egg: start_ALT_Expression_SEP_commasym ALT_Expression_SEP_commasym

   80 OPTMORE_Statement: hole_OPTMORE_Statement

   81 egg: start_OPTMORE_Statement OPTMORE_Statement

   82 OPT_fatalsym: hole_OPT_fatalsym

   83 egg: start_OPT_fatalsym OPT_fatalsym

   84 ALT_SubMessage_SEP_commasym: hole_ALT_SubMessage_SEP_commasym

   85 egg: start_ALT_SubMessage_SEP_commasym ALT_SubMessage_SEP_commasym

   86 OPT_openparsym_Identsym_closeparsym: hole_OPT_openparsym_Identsym_closeparsym

   87 egg: start_OPT_openparsym_Identsym_closeparsym OPT_openparsym_Identsym_closeparsym

   88 OPT_groupsym: hole_OPT_groupsym

   89 egg: start_OPT_groupsym OPT_groupsym


Terminals, with rules where they appear

$end (0) 0
error (256)
NONSENSE (258)
usessym (259) 2
commasym (260) 25 31 37
semicolonsym (261) 2 5 18
fatalsym (262) 35
errorsym (263) 13
warningsym (264) 14
disabledsym (265) 15
keysym (266) 16
postsym (267) 17
openparsym (268) 7 39
closeparsym (269) 7 39
groupsym (270) 41
openchainsym (271) 21
equalssym (272) 5
closechainsym (273) 21
commentsym (274)
Stringsym (275) 6 20 24 25
Identsym (276) 7 8 18 21 39
hole_egg (277) 42
start_egg (278) 43
hole_Uses (279) 44
start_Uses (280) 45
hole_Strings (281) 46
start_Strings (282) 47
hole_Declarations (283) 48
start_Declarations (284) 49
hole_Declaration (285) 50
start_Declaration (286) 51
hole_Expression (287) 52
start_Expression (288) 53
hole_Params (289) 54
start_Params (290) 55
hole_Statements (291) 56
start_Statements (292) 57
hole_Statement (293) 58
start_Statement (294) 59
hole_MessageKind (295) 60
start_MessageKind (296) 61
hole_Message (297) 62
start_Message (298) 63
hole_SubMessages (299) 64
start_SubMessages (300) 65
hole_SubMessage (301) 66
start_SubMessage (302) 67
hole_Group (303) 68
start_Group (304) 69
hole_OPTMORE_Group (305) 70
start_OPTMORE_Group (306) 71
hole_ALT_Stringsym_SEP_commasym (307) 72
start_ALT_Stringsym_SEP_commasym (308) 73
hole_OPTMORE_Declaration (309) 74
start_OPTMORE_Declaration (310) 75
hole_MORE_Expression (311) 76
start_MORE_Expression (312) 77
hole_ALT_Expression_SEP_commasym (313) 78
start_ALT_Expression_SEP_commasym (314) 79
hole_OPTMORE_Statement (315) 80
start_OPTMORE_Statement (316) 81
hole_OPT_fatalsym (317) 82
start_OPT_fatalsym (318) 83
hole_ALT_SubMessage_SEP_commasym (319) 84
start_ALT_SubMessage_SEP_commasym (320) 85
hole_OPT_openparsym_Identsym_closeparsym (321) 86
start_OPT_openparsym_Identsym_closeparsym (322) 87
hole_OPT_groupsym (323) 88
start_OPT_groupsym (324) 89


Nonterminals, with rules where they appear

$accept (70)
    on left: 0
egg (71)
    on left: 1 42 43 45 47 49 51 53 55 57 59 61 63 65 67 69 71 73 75
    77 79 81 83 85 87 89, on right: 0 43
Uses (72)
    on left: 2 44, on right: 1 45
Strings (73)
    on left: 3 46, on right: 2 47
Declarations (74)
    on left: 4 48, on right: 21 49
Declaration (75)
    on left: 5 50, on right: 27 51
Expression (76)
    on left: 6 7 8 52, on right: 28 29 30 31 53
Params (77)
    on left: 9 54, on right: 7 55
Statements (78)
    on left: 10 56, on right: 21 57
Statement (79)
    on left: 11 12 58, on right: 33 59
MessageKind (80)
    on left: 13 14 15 16 17 60, on right: 5 20 61
Message (81)
    on left: 18 62, on right: 11 63
SubMessages (82)
    on left: 19 64, on right: 18 65
SubMessage (83)
    on left: 20 66, on right: 36 37 67
Group (84)
    on left: 21 68, on right: 12 23 69
OPTMORE_Group (85)
    on left: 22 23 70, on right: 1 23 71
ALT_Stringsym_SEP_commasym (86)
    on left: 24 25 72, on right: 3 25 73
OPTMORE_Declaration (87)
    on left: 26 27 74, on right: 4 27 75
MORE_Expression (88)
    on left: 28 29 76, on right: 5 29 77
ALT_Expression_SEP_commasym (89)
    on left: 30 31 78, on right: 9 31 79
OPTMORE_Statement (90)
    on left: 32 33 80, on right: 10 33 81
OPT_fatalsym (91)
    on left: 34 35 82, on right: 18 21 83
ALT_SubMessage_SEP_commasym (92)
    on left: 36 37 84, on right: 19 37 85
OPT_openparsym_Identsym_closeparsym (93)
    on left: 38 39 86, on right: 21 87
OPT_groupsym (94)
    on left: 40 41 88, on right: 21 89


State 0

    0 $accept: . egg $end

    usessym                                    shift, and go to state 1
    hole_egg                                   shift, and go to state 2
    start_egg                                  shift, and go to state 3
    hole_Uses                                  shift, and go to state 4
    start_Uses                                 shift, and go to state 5
    start_Strings                              shift, and go to state 6
    start_Declarations                         shift, and go to state 7
    start_Declaration                          shift, and go to state 8
    start_Expression                           shift, and go to state 9
    start_Params                               shift, and go to state 10
    start_Statements                           shift, and go to state 11
    start_Statement                            shift, and go to state 12
    start_MessageKind                          shift, and go to state 13
    start_Message                              shift, and go to state 14
    start_SubMessages                          shift, and go to state 15
    start_SubMessage                           shift, and go to state 16
    start_Group                                shift, and go to state 17
    start_OPTMORE_Group                        shift, and go to state 18
    start_ALT_Stringsym_SEP_commasym           shift, and go to state 19
    start_OPTMORE_Declaration                  shift, and go to state 20
    start_MORE_Expression                      shift, and go to state 21
    start_ALT_Expression_SEP_commasym          shift, and go to state 22
    start_OPTMORE_Statement                    shift, and go to state 23
    start_OPT_fatalsym                         shift, and go to state 24
    start_ALT_SubMessage_SEP_commasym          shift, and go to state 25
    start_OPT_openparsym_Identsym_closeparsym  shift, and go to state 26
    start_OPT_groupsym                         shift, and go to state 27

    egg   go to state 28
    Uses  go to state 29


State 1

    2 Uses: usessym . Strings semicolonsym

    Stringsym                        shift, and go to state 30
    hole_Strings                     shift, and go to state 31
    hole_ALT_Stringsym_SEP_commasym  shift, and go to state 32

    Strings                     go to state 33
    ALT_Stringsym_SEP_commasym  go to state 34


State 2

   42 egg: hole_egg .

    $default  reduce using rule 42 (egg)


State 3

   43 egg: start_egg . egg

    usessym                                    shift, and go to state 1
    hole_egg                                   shift, and go to state 2
    start_egg                                  shift, and go to state 3
    hole_Uses                                  shift, and go to state 4
    start_Uses                                 shift, and go to state 5
    start_Strings                              shift, and go to state 6
    start_Declarations                         shift, and go to state 7
    start_Declaration                          shift, and go to state 8
    start_Expression                           shift, and go to state 9
    start_Params                               shift, and go to state 10
    start_Statements                           shift, and go to state 11
    start_Statement                            shift, and go to state 12
    start_MessageKind                          shift, and go to state 13
    start_Message                              shift, and go to state 14
    start_SubMessages                          shift, and go to state 15
    start_SubMessage                           shift, and go to state 16
    start_Group                                shift, and go to state 17
    start_OPTMORE_Group                        shift, and go to state 18
    start_ALT_Stringsym_SEP_commasym           shift, and go to state 19
    start_OPTMORE_Declaration                  shift, and go to state 20
    start_MORE_Expression                      shift, and go to state 21
    start_ALT_Expression_SEP_commasym          shift, and go to state 22
    start_OPTMORE_Statement                    shift, and go to state 23
    start_OPT_fatalsym                         shift, and go to state 24
    start_ALT_SubMessage_SEP_commasym          shift, and go to state 25
    start_OPT_openparsym_Identsym_closeparsym  shift, and go to state 26
    start_OPT_groupsym                         shift, and go to state 27

    egg   go to state 35
    Uses  go to state 29


State 4

   44 Uses: hole_Uses .

    $default  reduce using rule 44 (Uses)


State 5

   45 egg: start_Uses . Uses

    usessym    shift, and go to state 1
    hole_Uses  shift, and go to state 4

    Uses  go to state 36


State 6

   47 egg: start_Strings . Strings

    Stringsym                        shift, and go to state 30
    hole_Strings                     shift, and go to state 31
    hole_ALT_Stringsym_SEP_commasym  shift, and go to state 32

    Strings                     go to state 37
    ALT_Stringsym_SEP_commasym  go to state 34


State 7

   49 egg: start_Declarations . Declarations

    errorsym                  shift, and go to state 38
    warningsym                shift, and go to state 39
    disabledsym               shift, and go to state 40
    keysym                    shift, and go to state 41
    postsym                   shift, and go to state 42
    hole_Declarations         shift, and go to state 43
    hole_Declaration          shift, and go to state 44
    hole_MessageKind          shift, and go to state 45
    hole_OPTMORE_Declaration  shift, and go to state 46

    $default  reduce using rule 26 (OPTMORE_Declaration)

    Declarations         go to state 47
    Declaration          go to state 48
    MessageKind          go to state 49
    OPTMORE_Declaration  go to state 50


State 8

   51 egg: start_Declaration . Declaration

    errorsym          shift, and go to state 38
    warningsym        shift, and go to state 39
    disabledsym       shift, and go to state 40
    keysym            shift, and go to state 41
    postsym           shift, and go to state 42
    hole_Declaration  shift, and go to state 44
    hole_MessageKind  shift, and go to state 45

    Declaration  go to state 51
    MessageKind  go to state 49


State 9

   53 egg: start_Expression . Expression

    Stringsym        shift, and go to state 52
    Identsym         shift, and go to state 53
    hole_Expression  shift, and go to state 54

    Expression  go to state 55


State 10

   55 egg: start_Params . Params

    Stringsym                         shift, and go to state 52
    Identsym                          shift, and go to state 53
    hole_Expression                   shift, and go to state 54
    hole_Params                       shift, and go to state 56
    hole_ALT_Expression_SEP_commasym  shift, and go to state 57

    Expression                   go to state 58
    Params                       go to state 59
    ALT_Expression_SEP_commasym  go to state 60


State 11

   57 egg: start_Statements . Statements

    fatalsym                shift, and go to state 61
    hole_Statements         shift, and go to state 62
    hole_Statement          shift, and go to state 63
    hole_Message            shift, and go to state 64
    hole_Group              shift, and go to state 65
    hole_OPTMORE_Statement  shift, and go to state 66
    hole_OPT_fatalsym       shift, and go to state 67

    Identsym  reduce using rule 34 (OPT_fatalsym)
    $default  reduce using rule 32 (OPTMORE_Statement)

    Statements         go to state 68
    Statement          go to state 69
    Message            go to state 70
    Group              go to state 71
    OPTMORE_Statement  go to state 72
    OPT_fatalsym       go to state 73


State 12

   59 egg: start_Statement . Statement

    fatalsym           shift, and go to state 61
    hole_Statement     shift, and go to state 63
    hole_Message       shift, and go to state 64
    hole_Group         shift, and go to state 65
    hole_OPT_fatalsym  shift, and go to state 67

    $default  reduce using rule 34 (OPT_fatalsym)

    Statement     go to state 74
    Message       go to state 70
    Group         go to state 71
    OPT_fatalsym  go to state 73


State 13

   61 egg: start_MessageKind . MessageKind

    errorsym          shift, and go to state 38
    warningsym        shift, and go to state 39
    disabledsym       shift, and go to state 40
    keysym            shift, and go to state 41
    postsym           shift, and go to state 42
    hole_MessageKind  shift, and go to state 45

    MessageKind  go to state 75


State 14

   63 egg: start_Message . Message

    fatalsym           shift, and go to state 61
    hole_Message       shift, and go to state 64
    hole_OPT_fatalsym  shift, and go to state 67

    $default  reduce using rule 34 (OPT_fatalsym)

    Message       go to state 76
    OPT_fatalsym  go to state 77


State 15

   65 egg: start_SubMessages . SubMessages

    errorsym                          shift, and go to state 38
    warningsym                        shift, and go to state 39
    disabledsym                       shift, and go to state 40
    keysym                            shift, and go to state 41
    postsym                           shift, and go to state 42
    hole_MessageKind                  shift, and go to state 45
    hole_SubMessages                  shift, and go to state 78
    hole_SubMessage                   shift, and go to state 79
    hole_ALT_SubMessage_SEP_commasym  shift, and go to state 80

    MessageKind                  go to state 81
    SubMessages                  go to state 82
    SubMessage                   go to state 83
    ALT_SubMessage_SEP_commasym  go to state 84


State 16

   67 egg: start_SubMessage . SubMessage

    errorsym          shift, and go to state 38
    warningsym        shift, and go to state 39
    disabledsym       shift, and go to state 40
    keysym            shift, and go to state 41
    postsym           shift, and go to state 42
    hole_MessageKind  shift, and go to state 45
    hole_SubMessage   shift, and go to state 79

    MessageKind  go to state 81
    SubMessage   go to state 85


State 17

   69 egg: start_Group . Group

    fatalsym           shift, and go to state 61
    hole_Group         shift, and go to state 65
    hole_OPT_fatalsym  shift, and go to state 67

    $default  reduce using rule 34 (OPT_fatalsym)

    Group         go to state 86
    OPT_fatalsym  go to state 87


State 18

   71 egg: start_OPTMORE_Group . OPTMORE_Group

    fatalsym            shift, and go to state 61
    hole_Group          shift, and go to state 65
    hole_OPTMORE_Group  shift, and go to state 88
    hole_OPT_fatalsym   shift, and go to state 67

    Identsym  reduce using rule 34 (OPT_fatalsym)
    $default  reduce using rule 22 (OPTMORE_Group)

    Group          go to state 89
    OPTMORE_Group  go to state 90
    OPT_fatalsym   go to state 87


State 19

   73 egg: start_ALT_Stringsym_SEP_commasym . ALT_Stringsym_SEP_commasym

    Stringsym                        shift, and go to state 30
    hole_ALT_Stringsym_SEP_commasym  shift, and go to state 32

    ALT_Stringsym_SEP_commasym  go to state 91


State 20

   75 egg: start_OPTMORE_Declaration . OPTMORE_Declaration
